# appliedgraphs.github.io

./: README.md  astro.config.mjs  biome.json  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
.github/workflows/: continuous-deployment.yml  continuous-integration.yml
graph/: README.md  pyproject.toml
graph/graph/: data.py
graph/graph/scripts/: generate_svg.py
src/: config.json  site.json  theme.json
src/components/: Banner.astro  BlogPostCard.astro  Footer.astro  Header.astro  ImageMod.astro  Logo.astro  PageHeading.astro  Pagination.astro
src/config/: blog.json  site.json  theme.json
src/content/: config.ts  contact.json  index.json  services.json
src/content/blog/: -index.md  post-1.md  post-3.md
src/layouts/: Base.astro  Layout.astro
src/lib/utilities/: formatDate.ts  getSinglePage.astro  humanize.ts  index.ts  markdownify.ts  plainify.ts  slugify.ts  sortByDate.ts
src/pages/: _index.md  contact.astro  index-content.json  index.astro  services.astro
src/pages/blog/: index.astro
src/pages/blog/page/: [page].astro
src/pages/blog/post/: [slug].astro
src/styles/: base.scss  button.scss  components.scss  container.scss  content.scss  form.scss  main.scss  navigation.scss  section.scss  utilities.scss
