[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
networkx = {extras = ["default", "extra"], version = "^3.4.2"}

[tool.poetry.scripts]
generate-svg = "graph.scripts.generate_svg:main"